--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>Sedans</h1>
                 <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
                 or on your next road trip.</p>
-                <button>Learn More</button>
+                <button class="btn_1">Learn More</button>
             </div>
         
             <div class="col-2">
@@ -28,7 +28,7 @@
                 <h1>SUVs</h1>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                  and off-road adventures.</p>
-                <button>Learn More</button>
+                <button class="btn_2">Learn More</button>
             </div>
         
             <div class="col-3">
@@ -36,7 +36,7 @@
                 <h1>Luxury</h1>
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
                 rental and arrive in style.</p>
-                <button>Learn More</button>
+                <button class="btn_3">Learn More</button>
             </div>
         </div>
     </main>
